--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
 
   <body ng-app="flapperNews" ng-controller="MainCtrl">
 
-    <!-- {{test}} automatically replaced by Angularjs -->
-    <div>
-      {{test}}
-    </div>
-
     <!-- using ng-repeat allows automatic handling of lists -->
     <div ng-repeat="post in posts">
-      {{post}}
+      {{post.title}} - upvotes: {{post.upvotes}}
     </div>
   </body>
 
