--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   <body ng-app="flapperNews" ng-controller="MainCtrl">
 
+    <!-- Butotn to add new posts -->
+    <button ng-click="addPost()">Post</button>
+
     <!-- using ng-repeat allows automatic handling of lists -->
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
       {{post.title}} - upvotes: {{post.upvotes}}
