--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 
   <body ng-app="flapperNews" ng-controller="MainCtrl">
 
-    <!-- Butotn to add new posts -->
-    <button ng-click="addPost()">Post</button>
+    <!-- Form to add new posts -->
+    <!-- ng-model binds the input to $scope.title -->
+    <form ng-submit="addPost()">
+      <input type="text" ng-model="title"></input>
+      <button type="submit">Post</button>
+    </form>
 
     <!-- using ng-repeat allows automatic handling of lists -->
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
