--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </form>
 
     <!-- using ng-repeat allows automatic handling of lists -->
-    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+    <div ng-repeat="post in posts | orderBy:'-upvotes'">
+      <span ng-click="incrementUpvotes(post)">^</span>
       {{post.title}} - upvotes: {{post.upvotes}}
     </div>
   </body>
