--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
     <!-- Form to add new posts -->
     <!-- ng-model binds the input to $scope.title -->
     <form ng-submit="addPost()">
-      <input type="text" ng-model="title"></input>
+      <input type="text" placeholder="Title" ng-model="title"></input>
+      <br>
+      <input type="text" placeholder="Link" ng-model="link"></input>
+      <br>
       <button type="submit">Post</button>
     </form>
 
     <!-- using ng-repeat allows automatic handling of lists -->
     <div ng-repeat="post in posts | orderBy:'-upvotes'">
       <span ng-click="incrementUpvotes(post)">^</span>
-      {{post.title}} - upvotes: {{post.upvotes}}
+      <a ng-show="post.link" href="{{post.link}}">
+        {{post.title}}
+      </a>
+      <span ng-hide="post.link">
+        {{post.title}}
+      </span>
+      - upvotes: {{post.upvotes}}
     </div>
   </body>
 
