--- a/index.html
+++ b/index.html
@@ -5,36 +5,61 @@
     <!-- Text in title bar -->
     <title>Angular Application</title>
 
+    <!-- Import twitter bootstrap
+
     <!-- Angular.js source code -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 
     <!-- Angular.js app controller -->
     <script src="app.js"></script>
 
+    <style> .glyphicon-thumbs-up { cursor:pointer } </style>
+
   </head>
 
   <body ng-app="flapperNews" ng-controller="MainCtrl">
 
-    <!-- Form to add new posts -->
-    <!-- ng-model binds the input to $scope.title -->
-    <form ng-submit="addPost()">
-      <input type="text" placeholder="Title" ng-model="title"></input>
-      <br>
-      <input type="text" placeholder="Link" ng-model="link"></input>
-      <br>
-      <button type="submit">Post</button>
-    </form>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
 
-    <!-- using ng-repeat allows automatic handling of lists -->
-    <div ng-repeat="post in posts | orderBy:'-upvotes'">
-      <span ng-click="incrementUpvotes(post)">^</span>
-      <a ng-show="post.link" href="{{post.link}}">
-        {{post.title}}
-      </a>
-      <span ng-hide="post.link">
-        {{post.title}}
-      </span>
-      - upvotes: {{post.upvotes}}
+        <div class="page-header">
+          <h1>Flapper News</h1>
+        </div>
+
+        <div ng-repeat="post in posts | orderBy:'-upvotes'">
+          <span class="glyphicon glyphicon-thumbs-up"
+            ng-click="incrementUpvotes(post)"></span>
+          {{post.upvotes}}
+          <span style="font-size:20px; margin-left:10px;">
+            <a ng-show="post.link" href="{{post.link}}">
+              {{post.title}}
+            </a>
+            <span ng-hide="post.link">
+              {{post.title}}
+            </span>
+          </span>
+        </div>
+
+        <form ng-submit="addPost()"
+          style="margin-top:30px;">
+          <h3>Add a new post</h3>
+
+          <div class="form-group">
+            <input type="text"
+              class="form-control"
+              placeholder="Title"
+              ng-model="title"></input>
+          </div>
+          <div class="form-group">
+            <input type="text"
+            class="form-control"
+            placeholder="Link"
+            ng-model="link"></input>
+          </div>
+          <button type="submit" class="btn btn-primary">Post</button>
+        </form>
+
+      </div>
     </div>
   </body>
 
